# MAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gui  GEMINI.md  HANDOFF_PROMPT.md  HANDOFF_PROMPT_CONTINUATION.md  IMPLEMENTATION_SUMMARY.md  README.md  ULTRATHINK_IMPLEMENTATION_PROMPT.md  alembic.ini  docker-compose.yml  pyproject.toml  reproduce_issue.py  reproduce_issue_debug.py  reproduce_issue_debug_class.py  reproduce_issue_debug_class_strict.py  test_strict_dot.py
_griffe_compat/: __init__.py  enumerations.py  expressions.py  models.py
_griffe_compat/docstrings/: __init__.py  parsers.py
config/prompts/base/: system.yaml
docker/: README.md  docker-compose.llamacpp.yml  docker-compose.ollama.yml
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
frontend/e2e/: chat-integration.spec.ts  ui-debug.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: providers.tsx  routes.tsx
frontend/src/components/: Chat.tsx  MessageList.tsx  Sidebar.tsx
frontend/src/hooks/: index.ts  useAgents.ts  useAnalytics.ts  useHealth.ts  useKeyboardShortcuts.ts  useLLMStatus.ts  useMLXManager.ts  useModels.ts  useSessions.ts
oldprompts/: 01-docker-services.md  01-fix-stream-response-format.md  01-foundation-setup.md  01-gradio-setup.md  01-message-format-bridge.md  01-provider-abstraction-layer.md  01-tool-execution-reporting.md  02-api-integration.md  02-configuration-extension.md  02-core-implementation.md  02-core-ui-components.md  02-enhanced-conversation-memory.md  02-environment-config.md  02-explicit-chatbot-type.md  02-summarization-processor.md  03-context-window-manager.md  03-database-migrations.md  03-fix-error-handling.md  03-memory-integration.md  03-ollama-provider.md  03-provider-factory.md  03-session-history.md  03-zustand-state-management.md  04-api-config.md  04-chatagent-integration.md  04-document-upload.md  04-documentation-update.md  04-layout-routing.md  04-llamacpp-provider.md  04-polish-testing.md  04-service-integration.md  04-validation-testing.md  05-chat-components.md  05-history-processors.md  05-polish-testing.md  05-provider-factory.md  05-seed-testing.md  05-unit-tests.md  06-api-routes.md  06-message-input-files.md  (+19 more)
prompts/frontend/: 01-visual-theme-polish.md  02-model-switching.md  03-image-support.md
scripts/: list-mlx-models.sh  mlx_manager.py  seed_database.py  start-mlx-manager.sh  start-mlx-server.sh  test_conversation_memory.sh  test_frontend.sh  test_providers.sh
src/: cli.py  main.py
src/api/routes/: agents.py  (+7 more)
src/gui/: __init__.py  api_client.py  app.py  config.py  session.py  theme.py
tests/: conftest.py  verify_tools.py
tests/e2e/: test_api_agents.py
tests/gui/: __init__.py  test_frontend_integration.py  test_gui_integration.py
tests/integration/: test_conversation_memory.py
(+119 files in other folders)
