[tool.poetry]
name = "mai-framework"
version = "0.1.0"
description = "Production-ready AI application framework built on Pydantic AI"
authors = ["MAI Framework Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-ai = "^1.27.0"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.31"}
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
redis = "^5.1"
qdrant-client = "^1.11"
loguru = "^0.7"
httpx = "^0.28.1"
pyjwt = "^2.9"
bcrypt = "^4.2"
prometheus-client = "^0.21"
python-dotenv = "^1.0"
pydantic-settings = "^2.0"
pyyaml = "^6.0"
Jinja2 = "^3.1"
tenacity = "^9.0"
numpy = "^2.1"
psutil = "^6.0"
click = "^8.1"
rich = "^13.7"
gradio = "^6.0.2"
griffe = "^1.15.0"
typer = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
pytest-timeout = "^2.3"
black = "^24.8"
ruff = "^0.6"
mypy = "^1.11"
pre-commit = "^3.8"
faker = "^30.0"
locust = "^2.31"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.26"}

[tool.poetry.scripts]
mai = "src.cli:main"
mai-gui = "src.gui.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
